--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -11,6 +11,8 @@
     "com.unity.timeline": "1.8.7",
     "com.unity.ugui": "2.0.0",
     "com.unity.visualscripting": "1.9.4",
+    "com.unity.xr.arfoundation": "6.0.6",
+    "com.unity.xr.arkit": "6.0.6",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
